--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,67 @@ body {
   color: var(--links-text-color);
 }
 
-/* ------Tutaj skończyłem na sekcji "informations"------- */
+
+/* ----------services---------- */
+
+
+/* ----wcześniej "section-title"---- */
+.services__title {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/* -------wcześniej "secition-table"------ */
+.services__table {
+  display: flex;
+  list-style: none;
+  max-width: 1170px;
+  justify-content: space-between;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+/* ------wcześniej "section-table-box"------- */
+.services__table--box {
+  display: flex;
+  width: 370px;
+  position: relative;
+}
+
+.services__describe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-item-color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  width: 370px;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+
+
+
+
+
+
+
+
 
 .navy-links {
   display: flex;
@@ -318,51 +378,7 @@ body {
   color: #ffffff;
 }
 
-.section-title {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
 
-.section-table {
-  display: flex;
-  list-style: none;
-  max-width: 1170px;
-  justify-content: space-between;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-.section-table-box {
-  display: flex;
-  width: 370px;
-  position: relative;
-}
-
-.describe {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--white-item-color);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0;
-  width: 370px;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-}
 
 .photos-description {
   display: flex;
