--- a/css/styles.css
+++ b/css/styles.css
@@ -317,6 +317,82 @@ body {
 }
 
 
+/* ------------team----------- */
+
+
+.team {
+  background-color: #f5f4fa;
+}
+
+.team__title {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team__photos--description {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+}
+
+.team__photos--description .team__name {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.team__photos--description .team__profession {
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--links-text-color);
+}
+
+
+.team__photos--background {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+/* -----wcześniej "social-icon-box"------ */
+.team__icon--box {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-bottom: 30px;
+}
+
+.team__icon--item {
+  fill: var(--icon-color);
+  width: 44px;
+  height: 44px;
+  background-color: var(--white-item-color);
+  border-radius: 50%;
+  transition-property: fill, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team__icon--item > use {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.team__icon--item:hover {
+  cursor: pointer;
+  fill: var(--white-item-color);
+  background-color: var(--hoover-color);
+}
+
 
 
 
@@ -380,39 +456,6 @@ body {
 
 
 
-.photos-description {
-  display: flex;
-  list-style: none;
-  justify-content: space-between;
-}
-
-.photos-description .name {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-.photos-description .profession {
-  font-family: "Roboto";
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--links-text-color);
-}
-
-.team-background {
-  background-color: #f5f4fa;
-}
-
-.photos-background {
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
 
 .client-box {
   width: 170px;
@@ -444,34 +487,6 @@ body {
 
 .client-box:hover .client-logo {
   fill: var(--hoover-color);
-}
-
-.social-icon-box {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  padding-bottom: 30px;
-}
-
-.social-icon-item {
-  fill: var(--icon-color);
-  width: 44px;
-  height: 44px;
-  background-color: var(--white-item-color);
-  border-radius: 50%;
-  transition-property: fill, background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-icon-item > use {
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-.social-icon-item:hover {
-  cursor: pointer;
-  fill: var(--white-item-color);
-  background-color: var(--hoover-color);
 }
 
 .menu-2 {
