--- a/css/styles.css
+++ b/css/styles.css
@@ -11,49 +11,6 @@ body {
   margin: 0;
 }
 
-.backdrop {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  transition: 0.5s;
-  transition-timing-function: ease-out;
-}
-
-.modal {
-  width: 528px;
-  min-height: 581px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--white-item-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
-
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.close-btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: var(--white-item-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -630,11 +587,211 @@ body {
 }
 
 
+/* ---------------------------- */
+/* --------FOOTER---END-------- */
+/* ---------------------------- */
+
+
+/* ---------------------------- */
+/* -------MODAL---START-------- */
+/* ---------------------------- */
+
+.backdrop {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  transition: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  width: 528px;
+  min-height: 581px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white-item-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal__button--close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--white-item-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.form {
+  margin-top: 38px;
+}
+
+.form__fieldset {
+  display: flex;
+  position: relative;
+  align-items: center;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 448px;
+  margin-left: 40px;
+  padding-block: 11px;
+  margin-block: 28px;
+}
+
+.form .form__icon {
+  width: 18px;
+  height: 18px;
+  margin-right: 12px;
+}
+
+.form__fieldset .form__input {
+  border: 0;
+  background-color: transparent;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  outline: none;
+  width: 370px;
+}
+
+.form__fieldset:has(input:focus) {
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: var(--hoover-color);
+}
+
+.form__fieldset:has(input:focus) .form__icon {
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--hoover-color);
+}
+
+.form .form__label {
+  position: absolute;
+  font-size: 12px;
+  top: -18px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--links-text-color);
+}
+
+.form .form__title {
+  text-align: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.form .form__input--checkbox {
+  margin-right: 8px;
+  cursor: pointer;
+}
+
+.form .form__label--checkbox {
+  margin-left: 55px;
+  display: flex;
+  cursor: pointer;
+  position: relative;
+  align-items: center;
+}
+
+.form__label--checkbox input {
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+.form__label--checkbox .form__checkmark {
+  position: absolute;
+  width: 16px;
+  height: 15px;
+  background: var(--white-item-color);
+  border: 0.2px solid #212121;
+  border-radius: 2px;
+}
+
+.form__checkmark::after {
+  margin-top: -1px;
+  margin-left: -1px;
+  content: url(../images/sprite-svg/random-icons/icon-checked.svg);
+  fill: var(--hoover-color);
+  display: none;
+}
+
+.form__label--checkbox input:checked ~ .form__checkmark::after {
+  display: block;
+}
+
+.form__text--checkbox {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--links-text-color);
+  margin-left: 23px;
+}
+
+.form__text--link {
+  color: var(--hoover-color);
+}
+
+.form__button--send {
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0;
+  margin-left: 164px;
+  margin-top: 30px;
+  cursor: pointer;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--white-item-color);
+}
 
 
 
 
-
+/* ---------------------------- */
+/* --------MODAL---END--------- */
+/* ---------------------------- */
 
 
 .navy-links {
@@ -744,16 +901,6 @@ body {
   bottom: 0;
 }
 
-.footer__address {
-  font-family: "Roboto";
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--white-item-color);
-  margin-top: 20px;
-  margin-bottom: 9px;
-}
-
 .navy-btn {
   font-family: "Roboto";
   font-weight: 500;
@@ -801,21 +948,6 @@ body {
   padding-left: 24px;
 }
 
-.my-form {
-  margin-top: 38px;
-}
-
-.fieldset {
-  display: flex;
-  position: relative;
-  align-items: center;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  width: 448px;
-  margin-left: 40px;
-  padding-block: 11px;
-  margin-block: 28px;
-}
 
 .label-top {
   font-family: "Roboto";
@@ -826,135 +958,4 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-}
-
-.my-form .icon-form {
-  width: 18px;
-  height: 18px;
-  margin-right: 12px;
-}
-
-.fieldset .input {
-  border: 0;
-  background-color: transparent;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-  outline: none;
-  width: 370px;
-}
-
-.fieldset:has(input:focus) {
-  transition: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  border-color: var(--hoover-color);
-}
-
-.fieldset:has(input:focus) .icon-form {
-  transition: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  fill: var(--hoover-color);
-}
-
-.my-form .label {
-  position: absolute;
-  font-size: 12px;
-  top: -18px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: var(--links-text-color);
-}
-
-.my-form .form-title {
-  text-align: center;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 23px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-}
-
-.my-form .checkbox-input {
-  margin-right: 8px;
-  cursor: pointer;
-}
-
-.my-form .checkbox-label {
-  margin-left: 55px;
-  display: flex;
-  cursor: pointer;
-  position: relative;
-  align-items: center;
-}
-
-.checkbox-label input {
-  position: absolute;
-  width: 0;
-  height: 0;
-  opacity: 0;
-}
-
-.checkbox-label .checkmark {
-  position: absolute;
-  width: 16px;
-  height: 15px;
-  background: var(--white-item-color);
-  border: 0.2px solid #212121;
-  border-radius: 2px;
-}
-
-.checkmark::after {
-  margin-top: -1px;
-  margin-left: -1px;
-  content: url(../images/sprite-svg/random-icons/icon-checked.svg);
-  fill: var(--hoover-color);
-  display: none;
-}
-
-.checkbox-label input:checked ~ .checkmark::after {
-  display: block;
-}
-
-.checkbox-text {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: var(--links-text-color);
-  margin-left: 23px;
-}
-
-.checkbox-text-link {
-  color: var(--hoover-color);
-}
-
-.modal-btn-send {
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: 0;
-  margin-left: 164px;
-  margin-top: 30px;
-  cursor: pointer;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.06em;
-  color: var(--white-item-color);
 }
