--- a/sass/components/_informations.scss
+++ b/sass/components/_informations.scss
@@ -1,28 +1,10 @@
 .informations {
-    display: flex;
-    list-style: none;
-    max-width: 1170px;
-    justify-content: space-between;
-  }
-  
-  .informations__box {
-    width: 270px;
-  }
-  
-  .informations__icon--box {
-    width: 270px;
-    height: 120px;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-  }
-  
-  .informations__icon {
-    margin: 25px 100px;
-    width: 70px;
-    height: 70px;
-  }
-  
-  .informations .informations__title {
+  display: flex;
+  list-style: none;
+  max-width: 1170px;
+  justify-content: space-between;
+
+  .informations__title {
     font-family: "Roboto";
     font-weight: 700;
     font-size: 14px;
@@ -30,10 +12,29 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
   }
-  .informations .informations__text {
+
+  .informations__text {
     font-family: "Roboto";
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--links-text-color);
   }
+}
+
+.informations__box {
+  width: 270px;
+}
+
+.informations__icon--box {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+}
+
+.informations__icon {
+  margin: 25px 100px;
+  width: 70px;
+  height: 70px;
+}
