--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,7 +6,7 @@
   display: flex;
 }
 
-.footer__info--box {
+.footer__info-box {
   margin-top: 42px;
   margin-bottom: 60px;
 }
@@ -79,7 +79,7 @@
   margin-top: 0px;
 }
 
-.join__icon--box {
+.join__icon-box {
   display: flex;
   justify-content: center;
   gap: 10px;
