--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -41,7 +41,7 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__icon--box {
+.team__icon-box {
   display: flex;
   justify-content: center;
   gap: 10px;
