--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,3 +1,11 @@
+.clients {
+  display: flex;
+  list-style: none;
+  max-width: 1170px;
+  justify-content: space-between;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
 .clients__title {
   font-family: "Roboto";
   font-weight: 700;
@@ -5,14 +13,6 @@
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-}
-
-.clients__table {
-  display: flex;
-  list-style: none;
-  max-width: 1170px;
-  justify-content: space-between;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .clients__box {
