--- a/sass/components/_informations.scss
+++ b/sass/components/_informations.scss
@@ -26,7 +26,7 @@
   width: 270px;
 }
 
-.informations__icon--box {
+.informations__icon-box {
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
